# agent-in-a-browser

./: .actrc  .dockerignore  .gitignore  .gitmodules  .npmrc  CLAUDE.md  CONVERSATION_PIPELINE.md  Cargo.toml  Dockerfile  Dockerfile.ci-test  Dockerfile.dev  Dockerfile.repro  README.md  ROADMAP.md  docker-compose.yml  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  wrangler.toml
runtime/: BUILD_STATUS.md  Cargo.toml  README.md  moon.yml
runtime/crates/brush-shell/: Cargo.toml
runtime/crates/brush-shell/src/: bindings.rs  lib.rs  line_editor.rs
runtime/crates/brush-shell/wit/: world.wit
runtime/crates/core/: Cargo.toml
runtime/crates/core/src/: active_stream.rs  conversation.rs  events.rs  http_transport.rs  lib.rs  local_tools.rs  mcp_transport.rs  models.rs  models_api.rs  remote_mcp_client.rs  rig_agent.rs  rig_tools.rs  wasi_completion_model.rs  wasi_http_macro.rs  wasm_async.rs
runtime/crates/core/tests/: conversation_integration.rs
runtime/crates/edtui-module/: Cargo.toml
runtime/crates/edtui-module/src/: bindings.rs  lib.rs
runtime/crates/edtui-module/wit/: world.wit
runtime/crates/gix-module/: Cargo.toml
runtime/crates/gix-module/src/: bindings.rs  lib.rs
runtime/crates/gix-module/wit/: world.wit
runtime/crates/mcp-server-core/: Cargo.toml
runtime/crates/mcp-server-core/src/: handler.rs  jsonrpc.rs  lib.rs  protocol.rs
runtime/crates/ratatui-demo/: Cargo.toml
runtime/crates/ratatui-demo/src/: bindings.rs  lib.rs
runtime/crates/ratatui-demo/wit/: world.wit
runtime/crates/sqlite-module/: Cargo.toml
runtime/crates/sqlite-module/src/: bindings.rs  lib.rs
runtime/crates/sqlite-module/wit/: world.wit
runtime/crates/stripe-module/: Cargo.toml
runtime/crates/stripe-module/src/: bindings.rs  lib.rs
runtime/crates/stripe-module/wit/: world.wit
runtime/crates/tsx-engine/: COMPATIBILITY.md  Cargo.toml  ios-bridge.d.ts
runtime/crates/tsx-engine/src/: bindings.rs  http_client.rs  lib.rs  loader.rs  resolver.rs  transpiler.rs
runtime/crates/tsx-engine/src/js_modules/: assert.rs  child_process.rs  cluster.rs  console.rs  crypto.rs  dgram.rs  dns.rs  domain.rs  events.rs  fetch.rs  fs_promises.rs  http.rs  https.rs  ios_bridge.rs  mod.rs  module_mod.rs  net.rs  os.rs  perf_hooks.rs  process.rs  punycode.rs  querystring.rs  readline.rs  stream.rs  string_decoder.rs  tests.rs  timers.rs  tls.rs  tty.rs  url.rs  util.rs  utils.rs  v8.rs  vm.rs  worker_threads.rs  zlib.rs
runtime/crates/tsx-engine/src/js_modules/shims/: assert.js  buffer.js  child_process.js  cluster.js  crypto.js  dgram.js  dns.js  domain.js  encoding.js  events.js  fetch.js  headers.js  http.js  https.js  ios_bridge.js  module.js  net.js  os.js  path.js  perf_hooks.js  process.js  punycode.js  querystring.js  readline.js  stream.js  string_decoder.js  timers.js  tls.js  tty.js  url.js  util.js  v8.js  vm.js  worker_threads.js  zlib.js
runtime/crates/tsx-engine/wit/: world.wit
runtime/crates/wasmtime-runner/: Cargo.toml
runtime/crates/wasmtime-runner/src/: bindings.rs  host_traits.rs  http_router.rs  lib.rs  main.rs  mcp_stdio.rs  module_loader.rs
runtime/crates/wasmtime-runner/tests/: e2e-native.sh  e2e-native.ts  e2e.rs  e2e_pty.rs  mcp_protocol.rs
runtime/crates/wasmtime-runner/wit/: deps  host.wit
runtime/crates/web-agent-tui/: Cargo.toml
runtime/crates/web-agent-tui/src/: agent_core.rs  app.rs  backend.rs  bindings.rs  config.rs  display.rs  events.rs  input.rs  lib.rs  servers.rs
runtime/crates/web-agent-tui/src/bridge/: PLAN_MODE.md  SYSTEM_PROMPT.md  ai_client.rs  http_client.rs  local_tools.rs  mcp_client.rs  mod.rs  models_api.rs  oauth_client.rs  remote_mcp_client.rs  rig_agent.rs  rig_client.rs  rig_tools.rs  system_prompt.rs  wasi_completion_model.rs  wasi_http_adapter.rs
runtime/crates/web-agent-tui/src/commands/: mod.rs  slash_commands.rs
runtime/crates/web-agent-tui/src/snapshots/: web_agent_tui__display__tests__display_item_notice_error.snap  web_agent_tui__display__tests__display_item_notice_info.snap  web_agent_tui__display__tests__display_item_notice_warning.snap  web_agent_tui__display__tests__display_item_tool_activity_calling.snap  web_agent_tui__display__tests__display_item_tool_result_error.snap  web_agent_tui__display__tests__display_item_tool_result_success.snap
runtime/crates/web-agent-tui/src/ui/: agent_mode.rs  app_widget.rs  input_box.rs  messages.rs  mod.rs  overlays.rs  panels.rs  server_manager.rs  shell_mode.rs  status_bar.rs  theme.rs
runtime/crates/web-agent-tui/src/ui/snapshots/: web_agent_tui__ui__tests__ui_large_terminal.snap  web_agent_tui__ui__tests__ui_long_message_wrapping.snap  web_agent_tui__ui__tests__ui_mcp_servers_panel_text.snap  web_agent_tui__ui__tests__ui_narrow_terminal.snap  web_agent_tui__ui__tests__ui_needs_api_key_state.snap  web_agent_tui__ui__tests__ui_overlay_server_manager.snap  (+11 more)
runtime/crates/web-agent-tui/wit/: world.wit
runtime/crates/web-headless-agent/: Cargo.toml
runtime/crates/web-headless-agent/src/: bindings.rs  lib.rs
runtime/crates/web-headless-agent/src/bridge/: http_client.rs  mcp_client.rs  mod.rs  wasi_completion_model.rs  wasi_http_adapter.rs
runtime/crates/web-headless-agent/wit/: world.wit
runtime/runtime-macros/: Cargo.toml
runtime/runtime-macros/src/: lib.rs
runtime/src/: bindings.rs  host_bindings.rs  http_client.rs  interactive.rs  lib.rs  loader.rs  main.rs  mcp_server.rs  opfs.rs  resolver.rs  transpiler.rs
runtime/src/js_modules/: buffer.rs  encoding.rs  fetch.rs  fs_promises.rs  path.rs
runtime/src/js_modules/shims/: encoding.js  fetch.js  response.js  url.js
runtime/src/shell/: arithmetic.rs  braceexpansion.rs  commands.rs  env.rs  executor.rs  expand.rs  mod.rs  new_executor.rs  parser.rs  pipeline.rs
runtime/src/shell/commands/: archive.rs  core.rs  encoding.rs  env.rs  file.rs  git.rs  helpers.rs  json.rs  misc.rs  mod.rs  path.rs  sql.rs  string.rs  test.rs  text.rs  tsx.rs  util.rs  wasi_io.rs
runtime/src/shell/pipeline/: mod.rs  tests.rs
runtime/wit/: deps.toml  handler.wit  world.wit
(+473 files in other folders)
