[workspace]
members = [
    "runtime",
    "runtime/runtime-macros",
    "runtime/crates/tsx-engine",
    "runtime/crates/sqlite-module",
    "runtime/crates/ratatui-demo",
    "runtime/crates/brush-shell",
    "runtime/crates/web-agent-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Web Agent Contributors"]
license = "MIT"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Better optimization
strip = true      # Strip symbols
