[workspace]
members = [
    "runtime",
    "runtime/runtime-macros",
    "runtime/crates/core",
    "runtime/crates/tsx-engine",
    "runtime/crates/sqlite-module",
    "runtime/crates/ratatui-demo",
    "runtime/crates/web-agent-tui",
    "runtime/crates/web-headless-agent",
    "runtime/crates/mcp-server-core",
    "runtime/crates/edtui-module",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Web Agent Contributors"]
license = "MIT"

# Centralize wit-bindgen versions to ensure all crates produce compatible WASI interfaces.
# wit-bindgen 0.51 produces WASI 0.2.9 interfaces which must match wasi-shims Symbol markers.
# Note: wit-bindgen-rt has a separate versioning scheme from wit-bindgen
[workspace.dependencies]
wit-bindgen = { version = "0.51", features = ["async", "async-spawn"] }
wit-bindgen-rt = { version = "0.44", features = ["async", "bitflags"] }

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Better optimization
debug = true      # Debug info for browser profiling
