[package]
name = "ts-runtime-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ts-runtime-mcp"
path = "src/main.rs"
required-features = []

[dependencies]
# MCP Tool Macros
runtime-macros = { path = "runtime-macros" }

# The Engine: rquickjs uses QuickJS-NG by default, using git for wasm32-wasip1 bindings (PR #548)
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", features = [
    "futures",
    "loader",
    "classes",
    "macro",
] }

# The Transpiler: Individual SWC crates - let cargo resolve compatible versions
swc_common = "*"
swc_ecma_ast = "*"
swc_ecma_parser = { version = "*", default-features = false, features = [
    "typescript",
] }
swc_ecma_codegen = "*"
swc_ecma_transforms_typescript = "*"
swc_ecma_visit = "*"

# Browser Interop
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "WorkerGlobalScope",
    "Navigator",
    "StorageManager",
    "Response",
    "Request",
    "RequestInit",
    "Headers",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetFileOptions",
    "FileSystemGetDirectoryOptions",
    "FileSystemWritableFileStream",
    "File",
    "Blob",
] }

# Better panic messages in WASM
console_error_panic_hook = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

# Error handling
thiserror = "1"

# Async executor for WASI
futures-lite = "2"

# Shell infrastructure
piper = "0.2"            # Bounded SPSC async pipe
async-channel = "2"      # Bounded MPSC channels (shared stderr)
shlex = "1"              # Command line parsing
pin-project-lite = "0.2" # Pin projection for async
lexopt = "0.3"           # Minimal argument parsing

# Encoding/crypto - replacing handwritten implementations
md-5 = "0.10"   # MD5 hashing
sha2 = "0.10"   # SHA256 hashing  
base64 = "0.22" # Base64 encoding/decoding

# WASI bindings for http handler
wasi = "0.14"
wit-bindgen-rt = { version = "0.37.0", features = ["bitflags"] }
brush-parser = "0.3.0"
regex = "1"
itertools = "0.14"

# SQLite - Turso core (using fork with WASM simsimd fix)
turso_core = { git = "https://github.com/tjfontaine/turso.git", branch = "fix/simsimd-wasm-conditional", default-features = false, features = [
    "fs",
    "uuid",
] }

# Archive handling - pure Rust implementations (WASM-compatible)
tar = "0.4"    # TAR archive read/write (secure, not affected by CVE-2025-62518)
flate2 = "1.0" # GZIP via miniz_oxide (pure Rust, WASM-compatible by default)
bzip2 = "0.6"  # BZIP2 via pure Rust libbz2-rs-sys (0.6+ uses pure Rust by default)
# NOTE: zip_next default-features include zstd which requires C code - disable for WASM
zip_next = { version = "=1.1.0", default-features = false, features = [
    "deflate",
] }

# Git - pure Rust implementation (gitoxide project)
# NOTE: gix-path has wasm32-wasip2 incompatibility (requires unstable wasip2 feature)
# Git commands are disabled on WASM until upstream gix fixes wasip2 support
# Tracking: https://github.com/rust-lang/rust/issues/129033
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.gix]
version = "0.76"
default-features = false
features = ["basic", "attributes", "excludes", "status", "zlib-rs"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

# cargo-component metadata for incoming-handler world
[package.metadata.component]
package = "mcp:ts-runtime"

[package.metadata.component.target]
path = "wit"
world = "ts-runtime-mcp"

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "wit/deps/http" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:sockets" = { path = "wit/deps/sockets" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }

[package.metadata.component.dependencies]

[profile.release]
opt-level = "s"
lto = true
