[package]
name = "ts-runtime-mcp"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
# Default: Core + Archive (shell + http + fs + gzip/tar/zip)
# tsx and sqlite are lazy-loaded from separate WASM modules
default = ["archive"]

# Full build (legacy, not recommended - use lazy modules instead)
full = ["tsx", "sqlite", "archive"]

# TypeScript transpilation (SWC only - no rquickjs runtime)
tsx = [
    "dep:swc_common",
    "dep:swc_ecma_ast",
    "dep:swc_ecma_parser",
    "dep:swc_ecma_codegen",
    "dep:swc_ecma_transforms_typescript",
    "dep:swc_ecma_visit",
]

# SQLite database (turso_core)
sqlite = ["dep:turso_core"]

# Archive tools (tar, gzip, bzip2, zip)
archive = ["dep:tar", "dep:flate2", "dep:bzip2", "dep:zip_next"]

# Core-only: minimal shell without heavy commands
# Build with: cargo build --no-default-features

[dependencies]
# MCP Tool Macros
runtime-macros = { path = "runtime-macros" }

# MCP Server Core - JSON-RPC and protocol types
mcp-server-core = { path = "crates/mcp-server-core" }

# The Transpiler: Individual SWC crates (for tsx command)
# Versions pinned from Cargo.lock for reproducibility
swc_common = { version = "18.0", optional = true }
swc_ecma_ast = { version = "19.0", optional = true }
swc_ecma_parser = { version = "32.0", default-features = false, features = [
    "typescript",
], optional = true }
swc_ecma_codegen = { version = "21.0", optional = true }
swc_ecma_transforms_typescript = { version = "38.0", optional = true }
swc_ecma_visit = { version = "19.0", optional = true }

# Browser Interop
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "WorkerGlobalScope",
    "Navigator",
    "StorageManager",
    "Response",
    "Request",
    "RequestInit",
    "Headers",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetFileOptions",
    "FileSystemGetDirectoryOptions",
    "FileSystemWritableFileStream",
    "File",
    "Blob",
] }

# Better panic messages in WASM
console_error_panic_hook = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

# Error handling
thiserror = "2"

# Async executor for WASI
futures-lite = "2"

# Shell infrastructure
piper = "0.2"            # Bounded SPSC async pipe
async-channel = "2"      # Bounded MPSC channels (shared stderr)
shlex = "1"              # Command line parsing
pin-project-lite = "0.2" # Pin projection for async
lexopt = "0.3"           # Minimal argument parsing

# Encoding/crypto - replacing handwritten implementations
md-5 = "0.10"   # MD5 hashing
sha2 = "0.10"   # SHA256 hashing  
base64 = "0.22" # Base64 encoding/decoding

# WASI bindings for http handler
wasi = "0.14.7"
wit-bindgen-rt.workspace = true
brush-parser = "0.3.0"
regex = "1"
itertools = "0.14"

# SQLite - Turso core (optional)
turso_core = { git = "https://github.com/tjfontaine/turso.git", branch = "fix/simsimd-wasm-conditional", default-features = false, features = [
    "fs",
    "uuid",
], optional = true }

# Archive handling - pure Rust implementations (optional)
tar = { version = "0.4", optional = true }
flate2 = { version = "1.1", optional = true }
bzip2 = { version = "0.6", optional = true }
zip_next = { version = "=1.1.0", default-features = false, features = [
    "deflate",
], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# cargo-component metadata for incoming-handler world
[package.metadata.component]
package = "mcp:ts-runtime"

[package.metadata.component.target]
path = "wit"
world = "ts-runtime-mcp"

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "wit/deps/http" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:sockets" = { path = "wit/deps/sockets" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"mcp:module-loader" = { path = "wit/deps/module-loader" }
"shell:unix" = { path = "wit/deps/shell-unix" }

[package.metadata.component.dependencies]

[profile.release]
opt-level = "s"
lto = true
debug = true    # Enable debug info for browser profiling
