[package]
name = "brush-shell"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASI bindings
wasm-bindgen = "0.2"
wit-bindgen = "0.50"

# Shell parsing (for future use)
# brush-parser = "0.3.0"

[package.metadata.component]
package = "shell:unix"

[package.metadata.component.target]
path = "wit"
world = "brush-shell"

[package.metadata.component.target.dependencies]
"wasi:io" = { path = "wit/deps/io" }
