[package]
name = "agent-bridge"
version = "0.1.0"
edition = "2021"
description = "Shared LLM bridge components for web-agent"

[lib]
crate-type = ["rlib"]

[dependencies]
# AI Agent framework (wasip2 feature for WASI component model)
rig-core = { git = "https://github.com/tjfontaine/rig", branch = "wasip2", default-features = false, features = [
    "wasip2",
    "wasm",
] }

# HTTP client abstractions for rig-core compatibility
bytes = "1.5"
http = "1.0"
futures = { version = "0.3", default-features = false, features = [
    "alloc",
    "executor",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
