[package]
name = "edtui-module"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
# Enable performance metrics logging via eprintln!
perf_metrics = []

[dependencies]
# Text buffer - rope data structure for efficient large file editing
ropey = "1.6"

# Unicode character width for proper cursor positioning
unicode-width = "0.2"

# Syntax highlighting - use fancy-regex (pure Rust) instead of onig (C dep)
syntect = { version = "5.3", default-features = false, features = [
    "default-fancy",
] }

# ANSI parser for robust escape-sequence handling (arrow/home/end/delete/page keys)
anstyle-parse = "0.2.7"

# WASI bindings for component model
wasm-bindgen = "0.2"
wit-bindgen-rt.workspace = true


[package.metadata.component]
package = "shell:unix"

[package.metadata.component.target]
path = "wit"
world = "edtui-module"

[package.metadata.component.target.dependencies]
"wasi:io" = { path = "../../wit/deps/io" }
"wasi:filesystem" = { path = "../../wit/deps/filesystem" }
"wasi:clocks" = { path = "../../wit/deps/clocks" }
"wasi:cli" = { path = "../../wit/deps/cli" }
"wasi:sockets" = { path = "../../wit/deps/sockets" }
"wasi:random" = { path = "../../wit/deps/random" }
"terminal:info" = { path = "../../wit/deps/terminal-info" }
