[package]
name = "gix-module"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Git via gitoxide (pure Rust)
gix = { version = "0.76", default-features = false, features = [
    "basic",
    "attributes",
    "excludes",
    "status",
    "zlib-rs",
] }

# WASI bindings
wasm-bindgen = "0.2"
wit-bindgen-rt = { version = "0.37.0", features = ["bitflags"] }

# Async executor (for potential future use)
futures-lite = "2"

[package.metadata.component]
package = "shell:unix"

[package.metadata.component.target]
path = "wit"
world = "gix-module"

[package.metadata.component.target.dependencies]
"wasi:io" = { path = "wit/deps/io" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:clocks" = { path = "wit/deps/clocks" }
