[package]
name = "mcp-server-core"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for MCP (Model Context Protocol) servers"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# No additional dev dependencies needed - tests use serde_json
