[package]
name = "ratatui-demo"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASI bindings
wasm-bindgen = "0.2"
wit-bindgen-rt.workspace = true

[package.metadata.component]
package = "shell:unix"

[package.metadata.component.target]
path = "wit"
world = "ratatui-demo"

[package.metadata.component.target.dependencies]
"wasi:io" = { path = "wit/deps/io" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:sockets" = { path = "wit/deps/sockets" }
"wasi:random" = { path = "wit/deps/random" }
