[package]
name = "tsx-engine"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# QuickJS-NG engine
# Pinned to specific commit for API stability (Loader trait signature)
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", rev = "c99675e5", features = [
    "futures",
    "loader",
    "classes",
    "macro",
] }


# SWC transpiler (individual crates)
# Versions pinned from Cargo.lock for reproducibility
swc_common = { version = "18.0", features = ["sourcemap"] }
swc_ecma_ast = "19.0"
swc_ecma_parser = { version = "32.0", default-features = false, features = [
    "typescript",
] }
swc_ecma_codegen = "21.0"
swc_ecma_transforms_typescript = "38.0"
swc_ecma_transforms_base = "35.0"
swc_ecma_visit = "19.0"
swc_sourcemap = "9.3"

# WASI/WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Response",
    "Request",
    "RequestInit",
    "Headers",
] }
wit-bindgen-rt.workspace = true

# Serialization (for fetch options parsing)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async executor
futures-lite = "2"

# Source map handling for accurate error line numbers (TODO: implement)
# sourcemap = "9"

[package.metadata.component]
package = "shell:unix"

[package.metadata.component.target]
path = "wit"
world = "tsx-engine"

[package.metadata.component.target.dependencies]
# Use shared wit/deps from runtime to ensure consistent WASI versions
"wasi:io" = { path = "../../wit/deps/io" }
"wasi:filesystem" = { path = "../../wit/deps/filesystem" }
"wasi:clocks" = { path = "../../wit/deps/clocks" }
"wasi:http" = { path = "../../wit/deps/http" }
"wasi:sockets" = { path = "../../wit/deps/sockets" }
"wasi:random" = { path = "../../wit/deps/random" }
"wasi:cli" = { path = "../../wit/deps/cli" }
