[package]
name = "tsx-engine"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# QuickJS-NG engine
# Pinned to specific commit for API stability (Loader trait signature with ImportAttributes)
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", rev = "1fe498e7", features = [
    "futures",
    "loader",
    "classes",
    "macro",
] }


# SWC transpiler (individual crates)
swc_common = { version = "19.0", features = ["sourcemap"] }
swc_ecma_ast = "21.0"
swc_ecma_parser = { version = "35.0", default-features = false, features = [
    "typescript",
] }
swc_ecma_codegen = "24.0"
swc_ecma_transforms_typescript = "42.0"
swc_ecma_transforms_base = "38.0"
swc_ecma_visit = "21.0"
swc_sourcemap = "10.0"

# WASI/WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Response",
    "Request",
    "RequestInit",
    "Headers",
] }
wit-bindgen-rt.workspace = true

# Crypto hash algorithms
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"
hmac = "0.12"

# Serialization (for fetch options parsing)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async executor
futures-lite = "2"


[package.metadata.component]
package = "shell:unix"

[package.metadata.component.target]
path = "wit"
world = "tsx-engine"

[package.metadata.component.target.dependencies]
# Use shared wit/deps from runtime to ensure consistent WASI versions
"wasi:io" = { path = "../../wit/deps/io" }
"wasi:filesystem" = { path = "../../wit/deps/filesystem" }
"wasi:clocks" = { path = "../../wit/deps/clocks" }
"wasi:http" = { path = "../../wit/deps/http" }
"wasi:sockets" = { path = "../../wit/deps/sockets" }
"wasi:random" = { path = "../../wit/deps/random" }
"wasi:cli" = { path = "../../wit/deps/cli" }
"ios:bridge" = { path = "../../wit/deps/ios-bridge" }
