[package]
name = "web-agent-tui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# TUI framework - no default features to avoid crossterm
ratatui = { version = "0.30", default-features = false }

# AI Agent framework (wasm feature for browser compatibility)
rig-core = { version = "0.27", default-features = false, features = ["wasm"] }

# WASM support
wit-bindgen = "0.50"
wit-bindgen-rt = "0.44"

# Serialization for config and AI messages
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.component]
package = "agent:tui"

[package.metadata.component.target]
path = "wit"
world = "tui"

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "wit/deps/http" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:sockets" = { path = "wit/deps/sockets" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"mcp:module-loader" = { path = "wit/deps/module-loader" }
"shell:unix" = { path = "wit/deps/shell-unix" }
"terminal:info" = { path = "wit/deps/terminal-info" }
