[package]
name = "web-agent-tui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Shared agent bridge (MCP client, rig-tools, etc.)
agent-bridge = { path = "../core" }

# TUI framework - no default features to avoid crossterm
ratatui = { version = "0.30", default-features = false }

# AI Agent framework (wasip2 feature for WASI component model + wasm for relaxed Send bounds)
rig-core = { git = "https://github.com/tjfontaine/rig", branch = "wasip2", default-features = false, features = [
    "wasip2",
    "wasm",
] }

# WASM support with async features for streaming
wit-bindgen = { version = "0.50", features = ["async", "async-spawn"] }
wit-bindgen-rt = { version = "0.44", features = ["async"] }

# Serialization for config and AI messages
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client abstractions for rig-core compatibility
bytes = "1.5"
http = "1.0"
futures = { version = "0.3", default-features = false, features = [
    "alloc",
    "executor",
] }


[package.metadata.component]
package = "agent:tui"

[package.metadata.component.target]
path = "wit"
world = "tui"

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "wit/deps/http" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:sockets" = { path = "wit/deps/sockets" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"mcp:module-loader" = { path = "wit/deps/module-loader" }
"shell:unix" = { path = "wit/deps/shell-unix" }
"terminal:info" = { path = "wit/deps/terminal-info" }
